--- a/src/main/resources/static/html/MailTemplate.html
+++ b/src/main/resources/static/html/MailTemplate.html
@@ -2,18 +2,36 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>MustHave 메잁 템플릿</title>
+<title>MustHave 메일 템플릿</title>
+<style>
+    /* Basic Table Styles */
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 20px; /* Optional: Add some spacing between tables */
+      background-color: antiquewhite;
+    }
+
+    th, td {
+      padding: 10px;
+      border: 1px solid #ddd;
+      text-align: left;
+    }
+
+    /* Striped Table Styles */
+    .table-striped tbody tr:nth-child(odd) {
+      background-color: #f2f2f2;
+    }
+</style>
 </head>
 <body>
-	<h2>MustHave 메일 템플릿</h2>
-	<table border="1" width="100%">
+	<h2>식도라기 이메일 인증 페이지</h2>
+	<table class="table table-striped">
 		<tr>
-			<td width="50">내용</td>
 			<td>__CONTENT__</td>
 		</tr>
 		<tr>
-			<td>이미지</td>
-			<td><img src="https://github.com/goldenrabbit2020/musthave_jsp/blob/main/GOLDEN-RABBIT_LOGO_150.png?raw=true " /></td>
+			<td><img src="https://github.com/goldenrabbit2020/musthave_jsp/blob/main/GOLDEN-RABBIT_LOGO_150.png?raw=true" /></td>
 		</tr>
 	</table>
 </body>
