이메일발송시 이미지 변경, 줄바꿈

--- a/src/main/resources/static/html/MailTemplate.html
+++ b/src/main/resources/static/html/MailTemplate.html
@@ -31,7 +31,8 @@
 			<td>__CONTENT__</td>
 		</tr>
 		<tr>
-			<td><img src="https://github.com/goldenrabbit2020/musthave_jsp/blob/main/GOLDEN-RABBIT_LOGO_150.png?raw=true" /></td>
+			<td><img src="https://cdn.discordapp.com/attachments/671229998631223323/1185900783863074886/logo.png?ex=65914b2b&is=657ed62b&hm=ceea2a0b9201ba3e239d5a058af38db0d3e530181b75834b0e0e7230ed70426b&" 
+				width="200px"/></td>
 		</tr>
 	</table>
 </body>
